USB DAQ/USB-1901/C_C++/1901AIPoll/usbdask.h

    /*
     * DASK Data Types
     */
    typedef unsigned char  U8;
    typedef short          I16;
    typedef unsigned short U16;
    typedef long           I32;
    typedef unsigned long  U32;
    typedef double         F64;
    typedef struct _USBDAQ_INFO {
        USHORT      wModuleType;                      // Card Type: USB_19020 (1)
        USHORT      wCardID;                          // Card ID configured with onboard DIP-Switch
    } USBDAQ_DEVICE, *PUSBDAQ_DEVICE;
#define P2405_AI_Gate_ActiveHigh      0x00000004
#define P2405_AI_Gate_ActiveLow       0x00000000
    /*ReTrigger*/ // bit 25 in AI_ACQMCR
#define P2405_AI_EnReTigger           0x2000 // 0x02000000
// wTrigMode in UD_AIO_2405_Config()

    /*AI Trigger Mode*/
#define P2405_AI_TRGMOD_POST          0x0000 // 0x00000000
#define P2405_AI_TRGMOD_DELAY         0x4000 // 0x40000000
#define P2405_AI_TRGMOD_PRE           0x8000 // 0x80000000
#define P2405_AI_TRGMOD_MIDDLE        0xC000// 0xC0000000
//#define P2405_AI_TRGMOD_GATED         0x00000001
#define P2405_AI_TRGMOD_GATED         0x1000 // 0x10000000
   
    /*-------------------------------*/
    /* GPIO/GPTC Configuration       */
    /*-------------------------------*/
#define GPIO_IGNORE_CONFIG 0x00
   /*UD_DIO_1902_Config, UD_DIO_2401_Config*/ 
#define GPTC0_GPO1         0x01
#define GPI0_3_GPO0_1      0x02
//#define ENC0_GPO0          0x04
#define GPTC0_TC1          0x08
#define GPTC2_GPO3         0x10
#define GPI4_7_GPO2_3      0x20
//#define ENC1_GPO2          0x40
#define GPTC2_TC3          0x80
    /*GPIO Port*/
#define GPIO_PortA         0
#define GPIO_PortB         1
/*UD_DIO_2405_Config*/ 
#define P2405_DIGITAL_INPUT          0x30
#define P2405_COUNTER_INPUT          0x31
#define P2405_DIGITAL_OUTPUT         0x32
#define P2405_PULSE_OUTPUT           0x33
    /*-------------------------------------------------*/
    /* General Purpose Timer/Counter for USB-1902 */
    /*-------------------------------------------------*/
    /*Counter Mode*/
#define SimpleGatedEventCNT       0x01
#define SinglePeriodMSR           0x02
#define SinglePulseWidthMSR       0x03
#define SingleGatedPulseGen       0x04
#define SingleTrigPulseGen        0x05
#define RetrigSinglePulseGen      0x06
#define SingleTrigContPulseGen    0x07
#define ContGatedPulseGen         0x08
#define EdgeSeparationMSR         0x09
#define SingleTrigContPulseGenPWM 0x0a
#define ContGatedPulseGenPWM      0x0b
#define CW_CCW_Encoder            0x0c
#define x1_AB_Phase_Encoder       0x0d
#define x2_AB_Phase_Encoder       0x0e
#define x4_AB_Phase_Encoder       0x0f
#define Phase_Z                   0x10
#define MultipleGatedPulseGen     0x11
    /*GPTC clock source*/
#define GPTC_CLK_SRC_Ext          0x01
#define GPTC_CLK_SRC_Int          0x00
#define GPTC_GATE_SRC_Ext         0x02
#define GPTC_GATE_SRC_Int         0x00
#define GPTC_UPDOWN_Ext           0x04
#define GPTC_UPDOWN_Int           0x00
    /*GPTC clock polarity*/
#define GPTC_CLKSRC_LACTIVE       0x01
#define GPTC_CLKSRC_HACTIVE       0x00
#define GPTC_GATE_LACTIVE         0x02
#define GPTC_GATE_HACTIVE         0x00
#define GPTC_UPDOWN_LACTIVE       0x04
#define GPTC_UPDOWN_HACTIVE       0x00
#define GPTC_OUTPUT_LACTIVE       0x08
#define GPTC_OUTPUT_HACTIVE       0x00
    /*GPTC OP Parameter*/
#define IntGate                   0x0  /* Internal Gate */
#define IntUpDnCTR                0x1  /* Internal Up/Down Counter */
#define IntENABLE                 0x2  /* Internal Enable */
    /*--------------------------------------*/
    /* DAQ Event type for the event message */
    /*--------------------------------------*/
#define AIEnd     0
#define AOEnd     0
#define DIEnd     0
#define DOEnd     0
#define DBEvent   1
//#define TrigEvent 2


    /*
     * Encoder/GPTC Constants
     */
#define P1902_GPTC0                 0x00
#define P1902_GPTC1                 0x01
    /*Encoder Setting Event Control*/
#define P1902_EPT_PULWIDTH_200us    0x00
#define P1902_EPT_PULWIDTH_2ms      0x01
#define P1902_EPT_PULWIDTH_20ms     0x02
#define P1902_EPT_PULWIDTH_200ms    0x03
#define P1902_EPT_TRGOUT_GPO        0x04
#define P1902_EPT_TRGOUT_CALLBACK   0x08
    /*Event Type*/
#define P1902_EVT_TYPE_EPT0         0x00
#define P1902_EVT_TYPE_EPT1         0x01
    /*---------------------------------*/
    /* Constants for I Squared C (I2C) */
    /*---------------------------------*/
    /*I2C Port*/
#define I2C_Port_A 0
    /*I2C Control Operation*/
#define I2C_ENABLE 0
#define I2C_STOP   1
    /*----------------------------------------------------------------------------*/
    /* USB-DASK Function prototype                                               */
    /*----------------------------------------------------------------------------*/
    /*----------------------------------------------------------------------------*/
    /* Basic Function */
    I16 __stdcall UD_Register_Card ( U16 CardType, U16 card_num );
    I16 __stdcall UD_Release_Card ( U16 CardNumber );
    I16 __stdcall UD_Device_Scan ( U16 *pModuleNum, USBDAQ_DEVICE *pAvailModules );
    /*----------------------------------------------------------------------------*/
    /* AI Function */
    I16 __stdcall UD_AI_1902_Config ( U16 CardNumber, U16 wConfigCtrl, U16 wTrigCtrl, \
                                      U32 dwTrgLevel, U32 wReTriggerCnt, U32 dwDelayCount );
    I16 __stdcall UD_AI_2401_Config ( U16 CardNumber, U16 wChanCfg1, U16 wChanCfg2, \
                                      U16 wChanCfg3, U16 wChanCfg4, U16 wTrigCtrl );
    I16 __stdcall UD_AI_2401_PollConfig ( U16 wCardNumber, U16 wPollSpeed, \
                                          U16 wMAvgStageCh1, U16 wMAvgStageCh2, U16 wMAvgStageCh3, U16 wMAvgStageCh4 );
    I16 __stdcall UD_AI_1902_CounterInterval ( U16 CardNumber, U32 ScanIntrv, \
            U32 SampIntrv );
    I16 __stdcall UD_AI_AsyncCheck ( U16 CardNumber, BOOLEAN *Stopped, U32 *AccessCnt );
    I16 __stdcall UD_AI_AsyncClear ( U16 CardNumber, U32 *AccessCnt );
    I16 __stdcall UD_AI_AsyncDblBufferHalfReady ( U16 CardNumber, BOOLEAN *HalfReady, \
            BOOLEAN *StopFlag );
    I16 __stdcall UD_AI_AsyncDblBufferMode ( U16 CardNumber, BOOLEAN Enable );
    I16 __stdcall UD_AI_AsyncDblBufferTransfer ( U16 CardNumber, U16 *Buffer );
    I16 __stdcall UD_AI_AsyncDblBufferTransfer32 ( U16 CardNumber, U32 *pwBuffer );
    I16 __stdcall UD_AI_AsyncDblBufferOverrun ( U16 CardNumber, U16 op, U16 *overrunFlag );
    I16 __stdcall UD_AI_AsyncDblBufferHandled ( U16 CardNumber );
    I16 __stdcall UD_AI_AsyncDblBufferToFile ( U16 CardNumber );
    I16 __stdcall UD_AI_ContReadChannel ( U16 CardNumber, U16 Channel, U16 AdRange, \
                                          U16 *Buffer, U32 ReadCount, F64 SampleRate, U16 SyncMode );
    I16 __stdcall UD_AI_ContReadMultiChannels ( U16 CardNumber, U16 NumChans, \
            U16 *Chans, U16 *AdRanges, U16 *Buffer, U32 ReadCount, F64 SampleRate, \
            U16 SyncMode );
    I16 __stdcall UD_AI_ContReadChannelToFile ( U16 CardNumber, U16 Channel, \
            U16 AdRange, U8 *FileName, U32 ReadCount, F64 SampleRate, U16 SyncMode );
    I16 __stdcall UD_AI_ContReadMultiChannelsToFile ( U16 CardNumber, U16 NumChans, \
            U16 *Chans, U16 *AdRanges, U8 *FileName, U32 ReadCount, F64 SampleRate, \
            U16 SyncMode );
    I16 __stdcall UD_AI_InitialMemoryAllocated ( U16 CardNumber, U32 *MemSize );
    I16 __stdcall UD_AI_ReadChannel ( U16 CardNumber, U16 Channel, U16 AdRange, \
                                      U16 *Value );
    I16 __stdcall UD_AI_VReadChannel ( U16 CardNumber, U16 Channel, U16 AdRange, \
                                       F64 *voltage );
    I16 __stdcall UD_AI_ReadMultiChannels ( U16 CardNumber, U16 NumChans, U16 *Chans, \
                                            U16 *AdRanges, U16 *Buffer );
    I16 __stdcall UD_AI_SetTimeOut ( U16 CardNumber, U32 TimeOut );
    I16 __stdcall UD_AI_VoltScale ( U16 CardNumber, U16 AdRange, I16 reading, \
                                    F64 *voltage );
    I16 __stdcall UD_AI_ContVScale ( U16 CardNumber, U16 adRange, void *readingArray, \
                                     F64 *voltageArray, I32 count );
    I16 __stdcall UD_AI_2401_Scale32 ( U16 CardNumber, U16 adRange, U16 inType, \
                                       U32 reading, F64 *voltage );
                                       
    I16 __stdcall UD_AI_2401_ContVScale32 ( U16 CardNumber, U16 adRange, U16 inType, \
                                            U32 *readingArray, F64 *voltageArray, I32 count );
    I16 __stdcall UD_AI_AsyncReTrigNextReady ( U16 CardNumber, BOOLEAN *Ready, \
            BOOLEAN *StopFlag, U32 *RdyTrigCnt );
    I16 __stdcall UD_AI_EventCallBack ( U16 CardNumber, I16 mode, I16 EventType, \
                                        U32 callbackAddr );
    I16 __stdcall UD_AI_Moving_Average32 ( U16 CardNumber, U32 *SrcBuf, U32 *DesBuf, \
            U32 dwTgChIdx, U32 dwTotalCh, U32 dwMovAvgWindow, U32 dwSamplCnt );
 

    I16 __stdcall UD_AI_DDS_ActualRate_Get ( U16 CardNumber, F64 fSampleRate, F64 *fActualRate );
    I16 __stdcall UD_AI_2405_Chan_Config ( U16 CardNumber, U16 wChanCfg1, U16 wChanCfg2, U16 wChanCfg3, U16 wChanCfg4);
    I16 __stdcall UD_AI_2405_Trig_Config ( U16 CardNumber, U16 wConvSrc, U16 wTrigMode, U16 wTrigCtrl,  \
                                           U32 wReTrigCnt, U32 dwDLY1Cnt, U32 dwDLY2Cnt, U32 dwTrgLevel );
                                                                            
    I16 __stdcall UD_AI_VoltScale32 ( U16 CardNumber, U16 adRange, U16 inType, \
                                       U32 reading, F64 *voltage );
                                       
    I16 __stdcall UD_AI_ContVScale32 ( U16 CardNumber, U16 adRange, U16 inType, \
                                            U32 *readingArray, F64 *voltageArray, I32 count );
  
    I16 __stdcall UD_DIO_2405_Config ( U16 wCardNumber, U16 wPart1Cfg, U16 wPart2Cfg );
    

    enum {
        UD_CTR_Filter_Disable,
        UD_CTR_Filter_Enable = 1,
        UD_CTR_Reset_Rising_Edge_Counter = 2,
        UD_CTR_Reset_Frequency_Counter = 4,
        UD_CTR_Polarity_Positive = 8,
        UD_CTR_Polarity_Negative = 0,
    };
    I16 __stdcall UD_DIO_INT_EventMessage (U16 wCardNumber, I16 mode, HANDLE evt, HWND windowHandle, U32 message, void (__stdcall*callbackAddr)(void));