USB DAQ/USB-1901/VB 6.0/[VB6]USB1901_AI_DB_DMA/usbdask.bas


' Gated Trigger Level
''Global Const P2405_AI_Gate_ActiveHigh As UShort = &H4
''Global Const P2405_AI_Gate_ActiveLow As UShort = &H0

' ReTrigger
'Global Const P2405_AI_EnReTigger As UShort = &H2000

' AI Trigger Mode
'Global Const P2405_AI_TRGMOD_POST As UShort = &H0
'Global Const P2405_AI_TRGMOD_DELAY As UShort = &H4000
'Global Const P2405_AI_TRGMOD_PRE As UShort = &H8000
'Global Const P2405_AI_TRGMOD_MIDDLE As UShort = &HC000
'Global Const P2405_AI_TRGMOD_GATED As UShort = &H1000

' UD_DIO_2405_Config
'Global Const P2405_DIGITAL_INPUT As UShort = &H30
'Global Const P2405_COUNTER_INPUT As UShort = &H31
'Global Const P2405_DIGITAL_OUTPUT As UShort = &H32
'Global Const P2405_PULSE_OUTPUT As UShort = &H33

' GPIO/GPTC Configuration

Global Const GPIO_IGNORE_CONFIG = &H0

Global Const GPTC0_GPO1 = &H1
Global Const GPI0_3_GPO0_1 = &H2
Global Const ENC0_GPO0 = &H4
Global Const GPTC0_TC1 = &H8

Global Const GPTC2_GPO3 = &H10
Global Const GPI4_7_GPO2_3 = &H20
Global Const ENC1_GPO2 = &H40
Global Const GPTC2_TC3 = &H80

' GPIO Port
Global Const GPIO_PortA = 1
Global Const GPIO_PortB = 2

' General Purpose Timer/Counter for USB-1901/1902/1903 */

'Counter Mode
Global Const SimpleGatedEventCNT = &H1
Global Const SinglePeriodMSR = &H2
Global Const SinglePulseWidthMSR = &H3
Global Const SingleGatedPulseGen = &H4
Global Const SingleTrigPulseGen = &H5
Global Const RetrigSinglePulseGen = &H6
Global Const SingleTrigContPulseGen = &H7
Global Const ContGatedPulseGen = &H8
Global Const EdgeSeparationMSR = &H9
Global Const SingleTrigContPulseGenPWM = &HA
Global Const ContGatedPulseGenPWM = &HB
Global Const CW_CCW_Encoder = &HC
Global Const x1_AB_Phase_Encoder = &HD
Global Const x2_AB_Phase_Encoder = &HE
Global Const x4_AB_Phase_Encoder = &HF
Global Const Phase_Z = &H10
Global Const MultipleGatedPulseGen = &H11

'GPTC clock source
Global Const GPTC_CLK_SRC_Ext = &H1
Global Const GPTC_CLK_SRC_Int = &H0
Global Const GPTC_GATE_SRC_Ext = &H2
Global Const GPTC_GATE_SRC_Int = &H0
Global Const GPTC_UPDOWN_Ext = &H4
Global Const GPTC_UPDOWN_Int = &H0
'GPTC clock polarity
Global Const GPTC_CLKSRC_LACTIVE = &H1
Global Const GPTC_CLKSRC_HACTIVE = &H0
Global Const GPTC_GATE_LACTIVE = &H2
Global Const GPTC_GATE_HACTIVE = &H0
Global Const GPTC_UPDOWN_LACTIVE = &H4
Global Const GPTC_UPDOWN_HACTIVE = &H0
Global Const GPTC_OUTPUT_LACTIVE = &H8
Global Const GPTC_OUTPUT_HACTIVE = &H0
'GPTC OP Parameter
Global Const IntGate = &H0
Global Const IntUpDnCTR = &H1
Global Const IntENABLE = &H2

'DAQ Event type for the event message
Global Const AIEnd = 0
Global Const AOEnd = 0
Global Const DIEnd = 0
Global Const DOEnd = 0
Global Const DBEvent = 1
Global Const TrigEvent = 2

'Encoder/GPTC Constants
Global Const P1902_GPTC0 = &H0
Global Const P1902_GPTC1 = &H1

'Encoder Setting Event Control
Global Const P1902_EPT_PULWIDTH_200us = &H0
Global Const P1902_EPT_PULWIDTH_2ms = &H1
Global Const P1902_EPT_PULWIDTH_20ms = &H2
Global Const P1902_EPT_PULWIDTH_200ms = &H3
Global Const P1902_EPT_TRGOUT_GPO = &H4
Global Const P1902_EPT_TRGOUT_CALLBACK = &H8
'Event Type
Global Const P1902_EVT_TYPE_EPT0 = &H0
Global Const P1902_EVT_TYPE_EPT1 = &H1
'Constants for I Squared C (I2C)
'I2C Port
Global Const I2C_Port_A = 0
'I2C Control Operation
Global Const I2C_ENABLE = 0
Global Const I2C_STOP = 1
'convert from enum
Global Const UD_CTR_Filter_Disable = 0
Global Const UD_CTR_Filter_Enable = 1
Global Const UD_CTR_Reset_Rising_Edge_Counter = 2
Global Const UD_CTR_Reset_Frequency_Counter = 4
Global Const UD_CTR_Polarity_Positive = 0
Global Const UD_CTR_Polarity_Negative = 8

Declare Function WaitForSingleObject Lib "kernel32" (ByVal hHandle As Long, ByVal dwMilliseconds As Long) As Long
'-------------------------------------------------------------------'
'  PCIS-DASK Function prototype                                     '
'-------------------------------------------------------------------'
'Basic Functions
Declare Function UD_Register_Card Lib "Usb-Dask.dll" (ByVal cardType As Integer, ByVal card_num As Integer) As Integer
Declare Function UD_Release_Card Lib "Usb-Dask.dll" (ByVal CardNumber As Integer) As Integer
Declare Function UD_Device_Scan Lib "Usb-Dask.dll" (ByRef pModuleNum As Integer, ByRef pAvailModules As USBDAQ_DEVICE) As Integer

'AI Functions
Declare Function UD_AI_1902_Config Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal ConfigCtrl As Integer, ByVal TrigCtrl As Integer, ByVal TrgLevel As Long, ByVal ReTriggerCnt As Long, ByVal DelayCount As Long) As Integer
Declare Function UD_AI_2401_Config Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wChanCfg1 As Integer, ByVal wChanCfg2 As Integer, ByVal wChanCfg3 As Integer, ByVal wChanCfg4 As Integer, ByVal wTrigCtrl As Integer) As Integer
Declare Function UD_AI_2401_PollConfig Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wPollSpeed As Integer, ByVal wMAvgStageCh1 As Integer, ByVal wMAvgStageCh2 As Integer, ByVal wMAvgStageCh3 As Integer, ByVal wMAvgStageCh4 As Integer) As Integer
Declare Function UD_AI_1902_CounterInterval Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal ScanIntrv As Long, ByVal SampIntrv As Long) As Integer

Declare Function UD_AI_AsyncCheck Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, Stopped As Byte, AccessCnt As Long) As Integer
Declare Function UD_AI_AsyncClear Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, AccessCnt As Long) As Integer
Declare Function UD_AI_AsyncDblBufferHalfReady Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, HalfReady As Byte, StopFlag As Byte) As Integer
Declare Function UD_AI_AsyncDblBufferMode Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Enable As Byte) As Integer
Declare Function UD_AI_AsyncDblBufferTransfer Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByRef Buffer As Integer) As Integer
Declare Function UD_AI_AsyncDblBufferTransfer32 Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByRef Buffer As Long) As Integer
Declare Function UD_AI_AsyncDblBufferOverrun Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal op As Integer, overrunFlag As Integer) As Integer
Declare Function UD_AI_AsyncDblBufferHandled Lib "Usb-Dask.dll" (ByVal CardNumber As Integer) As Integer
Declare Function UD_AI_AsyncDblBufferToFile Lib "Usb-Dask.dll" (ByVal CardNumber As Integer) As Integer
Declare Function UD_AI_AsyncReTrigNextReady Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, Ready As Byte, StopFlag As Byte, RdyTrigCnt As Long) As Integer
'Declare Function UD_AI_ContReadChannel Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Channel As Integer, ByVal AdRange As Integer, Buffer As Long, ByVal ReadCount As Long, ByVal SampleRate As Double, ByVal SyncMode As Integer) As Integer
Declare Function UD_AI_ContReadChannel Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Channel As Integer, ByVal AdRange As Integer, Buffer As Integer, ByVal ReadCount As Long, ByVal SampleRate As Double, ByVal SyncMode As Integer) As Integer
Declare Function UD_AI_ContReadMultiChannels Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal NumChans As Integer, Chans As Integer, AdRanges As Integer, ByRef Buffer As Integer, ByVal ReadCount As Long, ByVal SampleRate As Double, ByVal SyncMode As Integer) As Integer
Declare Function UD_AI_ContReadChannelToFile Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Channel As Integer, ByVal AdRange As Integer, ByVal FileName As String, ByVal ReadCount As Long, ByVal SampleRate As Double, ByVal SyncMode As Integer) As Integer
Declare Function UD_AI_ContReadMultiChannelsToFile Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal NumChans As Integer, Chans As Integer, AdRanges As Integer, ByVal FileName As String, ByVal ReadCount As Long, ByVal SampleRate As Double, ByVal SyncMode As Integer) As Integer
Declare Function UD_AI_EventCallBack Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Mode As Integer, ByVal EventType As Integer, ByVal callbackAddr As Long) As Integer
Declare Function UD_AI_InitialMemoryAllocated Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, MemSize As Long) As Integer
Declare Function UD_AI_ReadChannel Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Channel As Integer, ByVal AdRange As Integer, Value As Integer) As Integer
Declare Function UD_AI_VReadChannel Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal Channel As Integer, ByVal AdRange As Integer, Voltage As Double) As Integer
Declare Function UD_AI_ReadMultiChannels Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal NumChans As Integer, Chans As Integer, AdRanges As Integer, ByRef Buffer As Integer) As Integer
Declare Function UD_AI_VoltScale Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal AdRange As Integer, ByVal reading As Integer, Voltage As Double) As Integer
Declare Function UD_AI_ContVScale Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal AdRange As Integer, readingArray As Integer, voltageArray As Double, ByVal CCount As Long) As Integer
Declare Function UD_AI_2401_Scale32 Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal AdRange As Integer, ByVal inType As Integer, ByVal reading As Long, ByRef Voltage As Double) As Integer
Declare Function UD_AI_2401_ContVScale32 Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal AdRange As Integer, ByVal inType As Integer, ByRef readingArray As Long, ByRef voltageArray As Double, ByVal count As Long) As Integer
Declare Function UD_AI_SetTimeOut Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal TimeOut As Long) As Integer
Declare Function UD_AI_Moving_Average32 Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByRef SrcBuf As Long, ByRef DesBuf As Long, ByVal dwTgChIdx As Long, ByVal dwTotalCh As Long, ByVal dwMovAvgWindow As Long, ByVal dwSamplCnt As Long) As Integer
' 2012Oct18, Jeff added for USB-2405
Declare Function UD_AI_2405_Chan_Config Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wChanCfg1 As Integer, ByVal wChanCfg2 As Integer, ByVal wChanCfg3 As Integer, ByVal wChanCfg4 As Integer) As Integer
Declare Function UD_AI_2405_Trig_Config Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal wConvSrc As Integer, ByVal wTrigMode As Integer, ByVal wTrigCtrl As Integer, ByVal dwReTrigCnt As Long, ByVal dwDLY1Cnt As Long, ByVal dwDLY2Cnt As Long, ByVal dwTrgLevel As Long) As Integer
Declare Function UD_AI_VoltScale32 Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal AdRange As Integer, ByVal inType As Integer, ByVal reading As Long, ByRef Voltage As Double) As Integer
Declare Function UD_AI_ContVScale32 Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByVal AdRange As Integer, ByVal inType As Integer, ByRef readingArray As Long, ByRef voltageArray As Double, ByVal count As Long) As Integer
Declare Function UD_AI_AsyncBufferTransfer322 Lib "Usb-Dask.dll" (ByVal CardNumber As Integer, ByRef Buffer As Long, ByVal offset As Long, ByVal count As Long) As Integer
Declare Function UD_AI_DDS_ActualRate_Get Lib "Usb-Dask.dll" (ByVal CardNumber, ByVal SampleRate As Double, ByRef ActualRate As Double) As Integer
